# edchecker_fork

./: Cargo.toml  README.md  benchmark.sh  collect_droidracer.sh  make_tables.py  make_tables.sh  output_table.tex  plot_droid.py  plot_res.py  run_dir.py  run_directory.sh  run_droid.sh  rust-toolchain.toml
.auctex-auto/: output_table.el
.github/workflows/: rust.yml
converters/: example_nidhugg.py  nidhugg.py
sanity_checks/: example.trace  exampleinput.dot  examplepp.dot  govind.dot  govind.trace  govindinput.dot  govindok.dot  nidhugg_first.dot  queue.dot  queue.trace  queue_copy.trace  queue_copyinput.dot  queue_copypp.dot  queue_ok.trace  queue_okinput.dot  queue_okok.dot  queue_okpp.dot  queue_sanity.trace  queue_sanityinput.dot  queueinput.dot  sanity2.dot  sanity2.trace  stack_viol.trace  stack_violinput.dot  stack_violok.dot  stack_violpp.dot
src/: algorithms.rs  do_edges.rs  eo_edges.rs  guesser.rs  heuristics.rs  main.rs  model.rs  msg_algorithms.rs  output.rs  parser.rs  preprocess.rs
src/lib/: algorithms.rs  checker.rs  cli.rs  do_edges.rs  eo_edges.rs  graph.rs  heuristics.rs  instance.rs  lib.rs  model.rs  msg_algorithms.rs  output.rs  parser.rs  preprocess.rs
traces/: cyclic_po_rf.trace  example.dot  example.trace  example.trace.dot  nidhugg_first.trace  queue.trace
traces/outputs/benchmarks/event-driven/2_msgs_nW_1/: trace1.trace.out  trace2.trace.out
traces/outputs/benchmarks/event-driven/2_msgs_nW_2/: trace1.trace.out  trace2.trace
traces/outputs/benchmarks/event-driven/2nW+2nR_1/: trace2.trace.out  trace3.trace  trace3.trace.out  (+1 more)
(+1845 files in other folders)
