[package]
name = "EDChecker"
version = "0.1.0"
edition = "2021"
default-run = "edchecker"


[lib]
name="lib"
path="src/lib/lib.rs"

[dependencies]
petgraph = "0.6.5"
clap = { version = "4.4.8", features = [ "derive" ] }
clap-verbosity-flag = "2.1.0"
regex="1.11.1"
itertools="0.13.0"
env_logger = "0.10.1"
log = "0.4.20"
glob = "0.3.2"
z3 = { git="https://github.com/grahnen/z3.rs" }
serde = { version="1.0", features = [ "derive" ] }
serde_json = "1.0"
csv = { version = "1.3" }
rand = "0.9.1"
